--- a/public/css/media.css
+++ b/public/css/media.css
@@ -1,14 +1,14 @@
 /*  */
 
 @media screen and (max-width: 767px) {
-    div.leftBanner img:last-child,
-    div.rightBanner img:last-child {
+    div.leftBanner a:last-child img,
+    div.rightBanner a:last-child img {
         display: block;
     }
 
     div.childCategories ul li div:first-child,
-    div.leftBanner img:first-child,
-    div.rightBanner img:first-child {
+    div.leftBanner a:first-child img,
+    div.rightBanner a:first-child img {
         display: none;
     }
 }
