--- a/public/css/style.css
+++ b/public/css/style.css
@@ -315,6 +315,58 @@ div.home_page_section_title h2 {
     padding: 10px;
 }
 
+
+/* Newsletter */
+
+div.newsletter {
+    background-color: #02031C;
+    padding: 10px;
+    margin: 15px;
+}
+
+div.newsletter h4 {
+    text-align: center;
+    color: #ee002d;
+    font-weight: 700;
+    margin: 15px;
+}
+
+div.newsletter form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+div.newsletter form input[type="text"] {
+    width: 100%;
+    height: 50px;
+    background-color: #44425a;
+    font-size: 14px;
+    font-style: italic;
+    color: #fff;
+    margin-bottom: 25px;
+    border: none;
+    padding: 0 25px;
+}
+
+div.newsletter form button[type="submit"] {
+    width: 100%;
+    height: 50px;
+    background-color: #ee002d;
+    font-size: 14px;
+    font-style: italic;
+    color: #FFFFFF;
+    border: none;
+    padding: 0 25px;
+    border-radius: 0;
+    transition: .4s all ease;
+}
+
+div.newsletter form button[type="submit"]:hover {
+    background-color: #FFFFFF;
+    color: #ee002d;
+}
+
 div.childCategories {
     border: 1px solid #fff;
     box-shadow: inset 3px 3px 15px 0;
@@ -390,6 +442,10 @@ div#app footer {
     left: 0;
     right: 0;
     position: absolute;
+}
+
+div#app footer div:first-child {
+    justify-content: space-around;
 }
 
 div#app footer div:first-child h1,
