--- a/public/css/dashboard/style.css
+++ b/public/css/dashboard/style.css
@@ -24,6 +24,10 @@ span.open_side_navigation {
     text-align: center;
 }
 
+#side_navigation li {
+    list-style: none;
+}
+
 #side_navigation a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
