--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,12 @@ div.singleTopFirstNewsLeft div.singleNewsHead div:first-child {
     margin-right: 5px;
 }
 
+div.singleTopFirstNewsLeft div.singleNewsHead div:first-child img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 div.singleTopFirstNewsLeft div.singleNewsHead div:last-child {
     width: 70%;
     height: 100%;
@@ -148,6 +154,12 @@ div.singleTopFirstNewsCenter div.singleNewsHead div:first-child {
     background-size: cover;
     object-fit: fill;
     background-position: center;
+}
+
+div.singleTopFirstNewsCenter div.singleNewsHead div:first-child img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 div.singleTopFirstNewsCenter div.singleNewsHead div:last-child h6.newsCat {
@@ -210,6 +222,12 @@ div.singleTopFirstNewsRight div.singleNewsHead div:first-child {
     margin-right: 5px;
 }
 
+div.singleTopFirstNewsRight div.singleNewsHead div:first-child img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 div.singleTopFirstNewsRight div.singleNewsHead div:last-child {
     width: 70%;
     height: 100%;
@@ -256,6 +274,12 @@ div.mostPopularNews div.singleMostPopularNews div.singleMostPopularNewsHead div:
     background-size: cover;
     object-fit: fill;
     background-position: center;
+}
+
+div.mostPopularNews div.singleMostPopularNews div.singleMostPopularNewsHead div:first-child img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 div.mostPopularNews div.singleMostPopularNews div.singleMostPopularNewsHead div:last-child h6.newsCat {
